R-O or R/W indicator in the StausBar.
[3203152] The language can changed 'on-the-fly'. It requires that the
resource-only DLLs be built with V2.0 or later of ResPWSL (i.e. supplied
with PasswordSafe V3.25.1 or later).
[3065111] Add/Edit now displays both the Application's (PasswordSafe) and the
current database's default Autotype string (if set via Manage->Options).
[2964804] The user can specify the list of symbols valid for a database and can
override this for any particular entry. Note: the inbuilt special symbols
for EasyVision and Pronounceable passwords can not be overriden in either case.
[] Allow user to control the copying password to clipboard when performing
"Browse to URL" via an option in Options->Security. This is a database option
i.e. you can have different setting for different databases.
[] Support importing of CSV files exported from KeePass V1. Note that KeePass V2's
export in the V1 format is does not conform to their own format as specified by their
V1 product and can not be imported. Please review our Help file for the settings in
KeePass required during their export.

Changes to Existing Features in 3.26
====================================
[] Polish installation texts added thanks to Michal Niklas.
[] An entry's password exipry date is set or cleared directly rather than using
the Set and Clear buttons after changing values.
[] The default password generation policy is now for 12 character
passwords that include symbol characters (previous default was 8, no
symbols).
[] Unknown database header fields and unknown entry fields are no longer exported
when a database is exported to XML as there is no mechanism to re-check them during
import. Exporting to XML and then importing to a new database can be used to remove
these unknown fields.
[] Date time fields, when exported to XML, now are in the W3C dateTime standard format
instead of PasswordSafe's.  This release can import XML files with date time fields in